; ModuleID = '/home/carl/AnghaBench/streem/src/extr_iter.c_exec_filter.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_iter.c_exec_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_data = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"v\00", align 1
@strm_filter = common dso_local global i32 0, align 4
@iter_filter = common dso_local global i32 0, align 4
@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32*)* @exec_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_filter(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.map_data*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = call %struct.map_data* @malloc(i32 4)
  store %struct.map_data* %10, %struct.map_data** %9, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load i32*, i32** %7, align 8
  %14 = load %struct.map_data*, %struct.map_data** %9, align 8
  %15 = getelementptr inbounds %struct.map_data, %struct.map_data* %14, i32 0, i32 0
  %16 = call i32 @strm_get_args(i32* %11, i32 %12, i32* %13, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %15)
  %17 = load i32, i32* @strm_filter, align 4
  %18 = load i32, i32* @iter_filter, align 4
  %19 = load %struct.map_data*, %struct.map_data** %9, align 8
  %20 = bitcast %struct.map_data* %19 to i8*
  %21 = call i32 @strm_stream_new(i32 %17, i32 %18, i32* null, i8* %20)
  %22 = call i32 @strm_stream_value(i32 %21)
  %23 = load i32*, i32** %8, align 8
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* @STRM_OK, align 4
  ret i32 %24
}

declare dso_local %struct.map_data* @malloc(i32) #1

declare dso_local i32 @strm_get_args(i32*, i32, i32*, i8*, i32*) #1

declare dso_local i32 @strm_stream_value(i32) #1

declare dso_local i32 @strm_stream_new(i32, i32, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
